--- a/Web/Views/Shared/_SideBar.cshtml
+++ b/Web/Views/Shared/_SideBar.cshtml
@@ -18,8 +18,8 @@
 
         </div>
         <div>
-            <span class="material-symbols-outlined"> inventory </span>
-            @Html.ActionLink("Products", "ProductoTienda", "Producto", null, new { @class = "" })
+            <span class="material-symbols-outlined">takeout_dining</span>
+            @Html.ActionLink("Inventario", "DetalleVendedor", "Producto", null, new { @class = "" })
             @*<h3>Products</h3>*@
         </div>
 
@@ -31,7 +31,7 @@
 
         <div>
             <span class="material-symbols-outlined"> inventory </span>
-            @Html.ActionLink("Productos Admin", "ProductoAdmin", "Producto", null, new { @class = "" })
+            @Html.ActionLink("Productos Admin", "ProductoAdminTienda", "Producto", null, new { @class = "" })
             @*<h3>Products</h3>*@
         </div>
 
