--- a/Web/Views/Producto/ProductoAdmin.cshtml
+++ b/Web/Views/Producto/ProductoAdmin.cshtml
@@ -2,10 +2,10 @@
 
 @{
     ViewBag.Title = "ProductoAdmin";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutTienda.cshtml";
 }
 
-<div class="content">
+<div class="" style="width: 80%; margin: 0 auto;">
 
     <h1 id="producto-titulo" class="producto-titulo text-center mb-5" style=" color: var(--gray-nav) !important; font-size: 2.3rem !important;">Productos</h1>
     <a href="@Url.Action("Create","Producto")" class="btn  text-white btn flex-grow-1 pt-2" style="background: var(--color-secondary-variant) ">Crear</a>
