--- a/Web/Views/Producto/ProductoTienda.cshtml
+++ b/Web/Views/Producto/ProductoTienda.cshtml
@@ -6,58 +6,7 @@
 }
 
 
-<div class="mt-5">
-
-    <div class="row d-flex flex-row justify-content-between mt-5">
-
-        <div class="col-md-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Filtros</h5>
-
-                    <div class="mb-3">
-                        <label for="precio">Precio:</label>
-                        <select class="form-select" id="precio">
-                            <option value="">Todos los precios</option>
-                            <option value="0-10">$0 - $10</option>
-                            <option value="10-50">$10 - $50</option>
-                            <option value="50-100">$50 - $100</option>
-                            <option value="100+">$100 o más</option>
-                        </select>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="categoria">Categoría:</label>
-                        <div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="categoria" id="categoria-todos" value="" checked>
-                                <label class="form-check-label" for="categoria-todos">Todos</label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="categoria" id="categoria-medicamentos" value="medicamentos">
-                                <label class="form-check-label" for="categoria-medicamentos"> Medicamentos </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="categoria" id="categoria-alimentos" value="alimentos">
-                                <label class="form-check-label" for="categoria-alimentos">Alimentos</label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="categoria" id="categoria-suministros" value="suministros">
-                                <label class="form-check-label" for="categoria-suministros">Suministros</label>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-
-
-                    <!-- Agrega más filtros según sea necesario -->
-
-                    <button type="button" class="btn btn-primary">Aplicar filtros</button>
-                </div>
-            </div>
-        </div>
+<div class="mt-5 d-flex justify-content-center">
 
 
         <div class="col-md-9 d-flex flex-row flex-wrap justify-content-between align-items-start">
